--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "learn_python3_by_ts"
+name = "python3_course_for_ts_devs"
 version = "0.0.1"
 description = ""
 authors = [
@@ -14,6 +14,6 @@ readme = "README.md"
 license = {text = "MIT"}
 
 [tool.pdm.scripts]
-jump = {shell = "cd ./src/learn_python3_by_ts/notebooks"}
+jump = {shell = "cd ./src/python3_course_for_ts_devs/notebooks"}
 up = "jupyter lab"
 learn = {composite = ["jump", "up"]}
