--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
     "[yaml]": {
         "editor.defaultFormatter": "redhat.vscode-yaml",
         "editor.formatOnSave": true
-    }
+    },
+    "python.analysis.extraPaths": [
+        "./src/python3_course_for_devs/notebooks"
+    ]
 }
